--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 Cython==0.28.2
 Django==2.2
+gunicorn==20.0.4
 Jinja2==2.10
-notebook==5.5.0
-numba==0.38.0
-numexpr==2.6.5
-numpy==1.17.0
-pandocfilters==1.4.2
-parso==0.2.0
-partd==0.3.8
 path.py==11.0.1
 pathlib2==2.3.2
 patsy==0.5.0
