--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-Cython==0.28.2
+distributed==1.21.8
+dj-database-url==0.5.0
 Django==2.2
+django-heroku==0.3.1
 gunicorn==20.0.4
 Jinja2==2.10
+more-itertools==4.1.0
 path.py==11.0.1
 pathlib2==2.3.2
-patsy==0.5.0
 pep8==1.7.1
+py==1.5.3
+pycodestyle==2.4.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.1
+pyflakes==1.6.0
+Pygments==2.2.0
+pylint==1.8.4
+pyodbc==4.0.23
+pyOpenSSL==19.0.0
+pyparsing==2.4.2
+pyrsistent==0.15.3
+PySocks==1.7.0
+pytest==3.5.1
+pytest-arraydiff==0.2
+pytest-astropy==0.3.0
+pytest-doctestplus==0.1.3
+pytest-openfiles==0.3.0
+pytest-remotedata==0.2.1
+python-dateutil==2.8.0
+unicodecsv==0.14.1
+whitenoise==5.1.0
